# Nova-shell

./: .gitignore  Analyse_NovaShell_0_8_Transkript.md  Atheria_Schnellstart.md  CITATION.cff  Dokumentation.md  LinkedIn.md  MANIFEST.in  MANIFEST_2026_FINAL.md  Multi-Agenten-Clusters.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  Tutorial.md  Was-es-Ist.md  Was_ist_nova-shell.md  Was_waere_wenn.md  Whitepaper.md  beispiel_rss.md  industry_scanner.py  morning_briefing.md  morning_briefing.ns  mycelia_runtime.py  nova_project_monitor.ns  nova_shell.py  novascript.py  podcastVideoTranscript.md  podcastVideoTranscript_publish_safe.md  pyproject.toml  release_notes.py  release_packaging.py  release_sbom.py  release_signing.py  sample_news.json  trend_rss_sensor.py  use_atheria.md  watch_the_big_players.ns  watch_the_big_players_test.ns  worker.py
Atheria/: aion_chronik.py  atheria_core.py  atheria_daemon.py  atheria_information_einstein_like.py  atheria_market_benchmarks.py  atheria_market_future_projection.py  atheria_spacetime_reconstruction.py  finance_sensor_macro_calendar.py  finance_sensor_move.py  finance_sensor_sector.py
WIKI/: AIOSConcept.md  APIReference.md  AgentSystems.md  AgentsAndKnowledge.md  Architecture.md  ArticlesReportsPresentations.md  AtheriaALSForDevelopers.md  AtheriaContinuousEvolutionAndLiveStream.md  AtheriaVoice.md  BlogsPressMedia.md  BooksAndWhitepapers.md  BuildAndRelease.md  CEOAgentExamples.md  CLIAndLegacyRuntime.md  ClassReference.md  CodeReferenceIndex.md  Community.md  ComponentModel.md  Contributing.md  DataAndExecutionEngines.md  DataFlow.md  DecisionPatterns.md  DevelopmentGuide.md  Dokumentation.md  ExamplesAndRecipes.md  ExecutionModel.md  FAQ.md  GeneralLinks.md  GermanLanguage.md  Glossary.md  Home.md  Installation.md  LensForDevelopers.md  LensRecipes.md  LensTroubleshooting.md  License.md  MeshAndDistributedExecution.md  MyceliaAtheriaCoEvolution.md  NSBlobGenerator.md  NovaAgents.md  (+69 more)
agent-skills-main/: README.md
android/: .gitignore  README.md  gradle.properties  settings.gradle
docs/: 01_Serverstart_und_Bootstrap.html  02_Paedagogische_Begleitung.html  03_Rollen_Rechte_und_Moderation.html  04_Systembetrieb_Sicherheit_und_Workspaces.html  05_Playground_Reviews_und_Deployments.html  AIOSConcept.html  APIReference.html  AgentSystems.html  AgentsAndKnowledge.html  Architecture.html  ArticlesReportsPresentations.html  AtheriaALSForDevelopers.html  AtheriaContinuousEvolutionAndLiveStream.html  AtheriaVoice.html  BlogsPressMedia.html  BooksAndWhitepapers.html  BuildAndRelease.html  CEOAgentExamples.html  CLIAndLegacyRuntime.html  ClassReference.html  CodeReferenceIndex.html  Community.html  ComponentModel.html  Contributing.html  DataAndExecutionEngines.html  DataFlow.html  DecisionPatterns.html  DevelopmentGuide.html  Dokumentation.html  ExamplesAndRecipes.html  ExecutionModel.html  FAQ.html  GeneralLinks.html  GermanLanguage.html  Glossary.html  Home.html  Installation.html  LensForDevelopers.html  LensRecipes.html  LensTroubleshooting.html  (+78 more)
examples/: advanced_agent_fabric.ns  ai_os_cluster.ns  blob_runtime.ns  blob_runtime_seed.nsblob.json  composition_patterns_agents.ns  consensus_fabric_cluster.ns  control_plane_runtime.ns  decision_lifecycle_template.ns  deploy_to_vercel_agents.ns  distributed_pipeline.ns  federated_swarm_memory.ns  file_extension_scan.ns  file_extension_scan_advanced.ns  items.csv  items_large.csv  market_radar.ns  mycelia_coevolution_lab.ns  nova_project_monitor.ns  nova_project_monitor_helper.py  nova_system_guard.ns  nova_system_guard_helper.py  react_best_practices_agents.ns  react_native_skills_agents.ns  replicated_control_plane.ns  secure_multi_tenant.ns  service_package_platform.ns  tech_radar.ns  vercel_cli_with_tokens_agents.ns  web_design_guidelines_agents.ns
media_reports/: Manifest_2026_Journalistic_DE.md  Manifest_2026_Journalistic_EN.md  Manifest_2026_OpEd_EN.md  Manifest_2026_Pitch_DE.md  Manifest_2026_Pitch_EN.md  Minfest_2026.md  README.md
nova/: __init__.py  ast.py
nova_std/: __init__.py  agent.py  dataset.py  event.py  flow.py  memory.py  mesh.py  sensor.py  tool.py  vector.py
packaging/: release.json
scripts/: build_android.py  build_linux.sh  build_release.py  build_windows.ps1  generate_agent_skills_examples.py  generate_project_monitor_ns.py  generate_release_notes.py  generate_system_guard_ns.py  sign_release.py  smoke_test_release.py  upgrade_windows_install.README.txt  upgrade_windows_install.ps1
tests/: test_build_android.py  test_build_release.py  test_nova_compiler.py  test_nova_language.py  test_nova_language_runtime.py  test_nova_parser.py  test_nova_runtime.py  test_nova_shell.py  test_release_automation.py  test_release_packaging.py  test_release_sbom.py
wiki-site/: AgentsAndKnowledge.html  Architecture.html  Community.html  (+24 more)
(+103 files in other folders)
