[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-shell"
dynamic = ["version"]
description = "Unified compute and data orchestration runtime for polyglot pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
  {name = "Nova-shell Team"}
]
keywords = ["cli", "runtime", "orchestration", "compute", "distributed-systems"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Interpreters",
  "Topic :: System :: Distributed Computing",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
observability = [
  "psutil>=5.9",
]
guard = [
  "PyYAML>=6.0",
]
arrow = [
  "pyarrow>=16.0",
]
wasm = [
  "wasmtime>=17.0",
]
gpu = [
  "numpy>=1.26",
  "pyopencl>=2024.3",
]
atheria = [
  "torch>=2.6",
]
release = [
  "build>=1.2.2",
  "nuitka>=2.6",
]

[project.scripts]
nova-shell = "nova_shell:main"

[tool.setuptools]
py-modules = ["nova_shell", "novascript", "release_packaging", "release_notes", "release_signing", "release_sbom"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "nova_shell.__version__"}
